<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#003461"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <ImageView
        android:id="@+id/pixel_layer"
        android:background="@drawable/backgroundrepeat"
        android:alpha="0.3"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:adjustViewBounds="true" />
    
    <ImageView
        android:id="@+id/screen_shadow"
        android:background="@drawable/screen_shadow"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:adjustViewBounds="true" />
    
    <ImageView
        android:id="@+id/screen_upper_glow"
        android:background="@drawable/screen_upper_glow"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        android:alpha="0.5"
        android:adjustViewBounds="true" />
    
    <ImageView
        android:id="@+id/screen_lower_glow"
        android:background="@drawable/screen_lower_glow"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:alpha="0.2"
        android:adjustViewBounds="true" />
    
    <ScrollView
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" >
        
        <LinearLayout
            android:orientation="vertical"
       	    android:layout_height="wrap_content"
    		android:layout_width="fill_parent" >
        	 
            <TextView
	            android:id="@+id/title_label"
	    		android:layout_width="fill_parent"
	   			android:layout_height="wrap_content"
	    		android:layout_margin="20dp"
		   		android:textColor="@android:color/white"
		   		android:shadowColor="#ffffff" 
		       	android:shadowDx="0.0"
		       	android:shadowDy="0.0"
	        	android:shadowRadius="8"
		   		android:text="@string/title_nol_info" />
            
           	<ImageView
		        android:id="@+id/text_box_border"
		        android:background="@drawable/square"
		        android:layout_height="80dip"
		        android:layout_width="fill_parent"
		        android:layout_marginRight="15dip"
		        android:layout_marginBottom="20dip"
		        android:layout_marginLeft="15dip" />
        	
           	<EditText
			    android:id="@+id/nol_number_field"
			    android:background="#00000000"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="-72dip"
			    android:layout_marginRight="40dip"
		        android:layout_marginLeft="40dip"
		        android:textColor="@android:color/white"
		   		android:shadowColor="#ffffff" 
		       	android:shadowDx="0.0"
		       	android:shadowDy="0.0"
	        	android:shadowRadius="8"
			    android:hint="@string/nol_number_field_placeholder"
			    android:inputType="number"
			    android:imeOptions="actionDone" />
           	
           	<Button
	        	android:id="@+id/check_balance_button"
	        	android:background="@drawable/btn_state"
	        	android:layout_height="60dip"
	        	android:layout_width="fill_parent"
	        	android:layout_marginTop="50dip"
	        	android:layout_marginLeft="15dip"
	        	android:layout_marginRight="15dip"
	        	android:text="@string/nol_balance_button"
	        	android:textColor="@android:color/white"
	        	android:shadowColor="#ffffff" 
	        	android:shadowDx="0.0"
	        	android:shadowDy="0.0"
	        	android:shadowRadius="8"
	        	android:gravity="center_vertical|center"
	        	style="?android:attr/borderlessButtonStyle"
	        	android:onClick="checkCardBalance" />
           	
        </LinearLayout>
        	
    </ScrollView>
    
</RelativeLayout>
